# QT

./: CMakeLists.txt  QT.cpp  Schotten_Totten.pro  chosegame.cpp  chosegame.h  chosegame.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h
Model/Board/: Board.cpp  Board.h
